# mini_gc_in_c_plus

./: CMakeLists.txt  readme.md
src/: main.cpp  object.cpp  vm.cpp
src/include/static/: object.h  vm.h
test/: unit_tests.cpp
